# xray-analyzer

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  QWEN.md  README.md  README.ru.md  docker-compose.yml  domains.txt  pyproject.toml
.github/workflows/: ci.yml  docker.yml
.qwen/: settings.json  settings.json.orig
dashboards/: xray-analyzer-dpi.json  xray-analyzer-nodes.json  xray-analyzer-proxies.json
docs/en/: architecture.md  cli.md  configuration.md  development.md  output.md
docs/ru/: architecture.md  cli.md  configuration.md  development.md  output.md
src/xray_analyzer/: cli.py  cli_dpi.py
src/xray_analyzer/core/: analyzer.py  config.py  cross_proxy_tests.py  logger.py  models.py  proxy_url.py  recommendation_engine.py  standalone_analyzer.py  throttle_checker_runner.py  xray_client.py
src/xray_analyzer/data/: CREDITS.md  __init__.py  dns_servers.json
src/xray_analyzer/diagnostics/: cdn_target_scanner.py  censor_checker.py  dns_checker.py  dns_dpi_prober.py  error_classifier.py  fat_probe_checker.py  http_injection_probe.py  (+18 more)
tests/: __init__.py  test_cdn_target_scanner.py  test_censor_checker.py  test_dns_checker.py  test_dns_dpi_prober.py  test_error_classifier.py  test_fakedns.py  test_fat_probe_checker.py  test_icmp_ping_checker.py  test_metrics_server.py  test_new_checks.py  test_proxy_cross_checker.py  test_proxy_xray_checker.py  test_recommendations.py  test_rkn_throttle_checker.py  test_settings_injection.py  test_sni_brute_force_checker.py  test_telegram_checker.py  test_telegram_notifier.py  test_tls_version_probe.py  test_xray_cross_connectivity.py  test_xray_manager.py
(+4 files in other folders)
