[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xray-analyzer"
version = "0.1.0"
description = "Advanced diagnostics tool for Xray proxy servers with DNS, TCP, and RKN blocking checks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.11.0",
    "aiohttp-socks>=0.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.0",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "aioresponses>=0.7.7",
    "ty>=0.0.31",
]

[project.scripts]
xray-analyzer = "xray_analyzer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xray_analyzer"]

[tool.hatch.build.targets.wheel.force-include]
"src/xray_analyzer/data/dns_servers.json" = "xray_analyzer/data/dns_servers.json"
"src/xray_analyzer/data/tcp16_targets.json" = "xray_analyzer/data/tcp16_targets.json"
"src/xray_analyzer/data/whitelist_sni.txt" = "xray_analyzer/data/whitelist_sni.txt"
"src/xray_analyzer/data/CREDITS.md" = "xray_analyzer/data/CREDITS.md"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "PTH", "ERA", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004", "PLR0911", "PLR0912", "PLR0915", "RUF001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ty.environment]
root = ["./src"]
python-version = "3.14"
